src/test/testData/component/interfaceOrAbstract/ClassComponent.java
import dagger.Component;

@<error descr="@Component may only be applied to an interface or abstract class">Component</error>
public class ClassComponent {

}
